[metadata]
name = pwsearch
version = 1.3.0
author = K4YT3X
author_email = k4yt3x@k4yt3x.com
license = MIT
description = PwnWiki 命令行搜索工具
url = https://github.com/pwsearchorg/pwsearch
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Security
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = gevent; grequests; loguru; pymediawiki; requests; rich
python_requires = >=3.6

[options.entry_points]
console_scripts = pwsearch = pwsearch:main
